Add initial styling and more resume content

--- a/resume.html
+++ b/resume.html
@@ -2,103 +2,99 @@
 <html>
     <head>
         <title>Resume</title>
+        <link rel="stylesheet" type="text/css" href="css/resume.css">
+        <link href='https://fonts.googleapis.com/css?family=Gudea:400,700,400italic' rel='stylesheet' type='text/css'>
     </head>
 
     <body>
         <div class="resume">
             <div class="header">
-                <div class="header__name">
-                    <p>Sahana Rajasekar</p>
-                </div>
-                <div class="header__address">
-                    <p>1025 Bush Street, Apt #3, San Francisco CA 94109</p>
-                </div>
-                <div class="header__phone">
-                    <p>(408) 621-8507</p>
-                </div>
-                <div class="header__website">
-                    <p>www.sahanarajasekar.com</p>
-                </div>
-                <div class="header__email">
-                    <p>shnraj@gmail.com</p>
+                <h1 class="header__name">SAHANA RAJASEKAR</h1>
+                <p class="header__address">1025 Bush Street, Apt #3, San Francisco CA 94109</p>
+                <p class="header__phone">(408) 621-8507</p>
+                <p class="header__website">| www.sahanarajasekar.com</p>
+                <p class="header__email">| shnraj@gmail.com</p>
+            </div>
+
+            <div class="resume-block">
+                <h2 class="resume-block__heading">Education</h2>
+                <div class="resume-element resume-element--block">
+                    <p class="resume-element__title">University of California, Berkeley</p>
+                    <p class="resume-element__subtitle">Electrical Engineering and Computer Science</p>
+                    <p class="resume-element__dates">September 2010 - May 2014</p>
                 </div>
             </div>
 
             <div class="resume-block">
-                <div class="resume-block__heading">
-                    <p>Education</p>
+                <h2 class="resume-block__heading">Skills</h2>
+                <div class="resume-element resume-element--list">
+                    <p class="resume-element__title">Programming Languages:</p>
+                    <p class="resume-element__description">Python, Java, HTML5, CSS, JavaScript, C#</p>
                 </div>
-                <div class="resume-element--block">
-                    <div class="resume-element__title">
-                    </div>
-                    <div class="resume-element__dates">
-                    </div>
-                    <div class="resume-element__description">
-                    </div>
+                <div class="resume-element resume-element--list">
+                    <p class="resume-element__title">Operating Systems:</p>
+                    <p class="resume-element__description">Mac OS, Windows</p>
                 </div>
-            </div>
-
-            <div class="resume-block">
-                <div class="resume-block__heading">
-                    <p>Skills</p>
-                </div>
-                <div class="resume-element--list">
-                    <div class="resume-element__title">
-                    </div>
-                    <div class="resume-element__description">
-                    </div>
+                <div class="resume-element resume-element--list">
+                    <p class="resume-element__title">Applications:</p>
+                    <p class="resume-element__description">GitHub, Visual Studio, Eclipse, Adobe Photoshop, Adobe Illustrator, VirtualBox, Microsoft Office, GIMP, Cyberduck, Autodesk Maya, iMovie</p>
                 </div>
             </div>
 
             <div class="resume-block">
-                <div class="resume-block__heading">
-                    <p>Coursework</p>
+                <h2 class="resume-block__heading">Coursework</h2>
+                <div class="resume-element resume-element--bulleted-list">
+                    <ul>
+                        <li class="resume-element__description">Structure and Interpretation of Computer Programs</li>
+                        <li class="resume-element__description">Data Structures and Programming Methodology</li>
+                        <li class="resume-element__description">Machine Structures</li>
+                        <li class="resume-element__description">Signals and Systems</li>
+                        <li class="resume-element__description">User Interface Design and Development</li>
+                        <li class="resume-element__description">Artificial Intelligence</li>
+                        <li class="resume-element__description">Algorithms</li>
+                        <li class="resume-element__description">Operating Systems</li>
+                        <li class="resume-element__description">Software Engineering</li>
+                        <li class="resume-element__description">Critical Making</li>
+                    </ul>
                 </div>
+            </div>
+
+            <div class="resume-block">
+                <h2 class="resume-block__heading">Projects</h2>
                 <div class="resume-element--bulleted-list">
-                    <div class="resume-element__description">
-                    </div>
+                    <p class="resume-element__title"></p>
+                    <p class="resume-element__description"></p>
                 </div>
             </div>
 
             <div class="resume-block">
-                <div class="resume-block__heading">
-                    <p>Projects</p>
+                <h2 class="resume-block__heading">Experience</h2>
+                <div class="resume-element resume-element--block">
+                    <p class="resume-element__title"> </p>
+                    <p class="resume-element__subtitle"> </p>
+                    <p class="resume-element__dates"> </p>
+                    <p class="resume-element__description"> </p>
                 </div>
-                <div class="resume-element--bulleted-list">
-                    <div class="resume-element__title">
-                    </div>
-                    <div class="resume-element__description">
-                    </div>
+                <div class="resume-element resume-element--block">
+                    <p class="resume-element__title"> </p>
+                    <p class="resume-element__subtitle"> </p>
+                    <p class="resume-element__dates"> </p>
+                    <p class="resume-element__description"> </p>
                 </div>
+                <div class="resume-element resume-element--block">
+                    <p class="resume-element__title"> </p>
+                    <p class="resume-element__subtitle"> </p>
+                    <p class="resume-element__dates"> </p>
+                    <p class="resume-element__description"> </p>
+                </div>
+
             </div>
 
             <div class="resume-block">
-                <div class="resume-block__heading">
-                    <p>Experience</p>
-                </div>
-                <div class="resume-element--block">
-                    <div class="resume-element__title">
-                    </div>
-                    <div class="resume-element__position">
-                    </div>
-                    <div class="resume-element__location">
-                    </div>
-                    <div class="resume-element__dates">
-                    </div>
-                    <div class="resume-element__description">
-                    </div>
-                </div>
-            </div>
-
-            <div class="resume-block">
-                <div class="resume-block__heading">
-                    <p>Activities + Honors</p>
-                </div>
+                <h2 class="resume-block__heading">Activities + Honors</h2>
                 <div class="resume-element--list">
-                    <div class="resume-element__title">
-                    </div>
-                    <div class="resume-element__description">
-                    </div>
+                    <p class="resume-element__title"> </p>
+                    <p class="resume-element__description"> </p>
                 </div>
             </div>
         </div>
