Complete initial resume styling and add all content

--- a/resume.html
+++ b/resume.html
@@ -12,8 +12,8 @@
                 <h1 class="header__name">SAHANA RAJASEKAR</h1>
                 <p class="header__address">1025 Bush Street, Apt #3, San Francisco CA 94109</p>
                 <p class="header__phone">(408) 621-8507</p>
-                <p class="header__website">| www.sahanarajasekar.com</p>
-                <p class="header__email">| shnraj@gmail.com</p>
+                <p class="header__website">| <a href='www.sahanarajasekar.com'>www.sahanarajasekar.com</a></p>
+                <p class="header__email">| <a href="mailto:shnraj@gmail.com">shnraj@gmail.com</a></p>
             </div>
 
             <div class="resume-block">
@@ -60,41 +60,114 @@
             </div>
 
             <div class="resume-block">
-                <h2 class="resume-block__heading">Projects</h2>
-                <div class="resume-element--bulleted-list">
-                    <p class="resume-element__title"></p>
-                    <p class="resume-element__description"></p>
+                <h2 class="resume-block__heading">Experience</h2>
+                <div class="resume-element resume-element--block">
+                    <p class="resume-element__title">Software Engineer</p>
+                    <p class="resume-element__subtitle">Pinterest</p>
+                    <p class="resume-element__dates">May 2014 - Present</p>
+                    <ul>
+                        <li class="resume-element__description">Working as a full-stack engineer on the advertiser experience team.</li>
+                        <li class="resume-element__description">Prevously worked on the web team building front-end features.</li>
+                    </ul>
+                </div>
+                <div class="resume-element resume-element--block">
+                    <p class="resume-element__title">Software Development Engineer Intern</p>
+                    <p class="resume-element__subtitle">Microsoft</p>
+                    <p class="resume-element__dates">May 2013 - Aug 2013</p>
+                    <ul>
+                        <li class="resume-element__description">Developed a tool that allows quick refactoring of strings into resource files within Visual Studio.</li>
+                    </ul>
+                </div>
+                <div class="resume-element resume-element--block">
+                    <p class="resume-element__title">Freelance Web Developer and Designer</p>
+                    <p class="resume-element__dates">Aug 2011 - May 2014</p>
+                    <ul>
+                        <li class="resume-element__description">Design and create websites and fliers, full portfolio can be found at
+                        <a href='www.sahanarajasekar.com'>www.sahanarajasekar.com</a></li>
+                    </ul>
+                </div>
+                <div class="resume-element resume-element--block">
+                    <p class="resume-element__title">Associated Students of the University of California Senator</p>
+                    <p class="resume-element__subtitle">UC Berkeley</p>
+                    <p class="resume-element__dates">Aug 2012 - Jan 2013</p>
+                    <ul>
+                        <li class="resume-element__description">One of 20 elected senators in UC Berkeley's student government, the Associated Students of the University of California.</li>
+                        <li class="resume-element__description">Work on projects related to promoting innovation and improving mental health resources at UC Berkeley.</li>
+                    </ul>
+                </div>
+                <div class="resume-element resume-element--block">
+                    <p class="resume-element__title">Intern</p>
+                    <p class="resume-element__subtitle">Microsoft</p>
+                    <p class="resume-element__dates">May 2012 - Aug 2012</p>
+                    <ul>
+                        <li class="resume-element__description">Worked as a developer with the Microsoft C++: Immersive 3D team.</li>
+                        <li class="resume-element__description">Designed and created an Audio Editor Extension for Visual Studio.</li>
+                    </ul>
+                </div>
+                <div class="resume-element resume-element--block">
+                    <p class="resume-element__title">Creative IT Research Assistant</p>
+                    <p class="resume-element__subtitle">UC Berkeley</p>
+                    <p class="resume-element__dates">Sep 2011 - Aug 2012</p>
+                    <ul>
+                        <li class="resume-element__description">Researched the effect of metaphors on the creative ideation process at the Berkeley Institute of Design.</li>
+                        <li class="resume-element__description">Designed and developed the front-end user-interface for meta4explorer (a website to help with metaphor generation).</li>
+                    </ul>
+                </div>
+                <div class="resume-element resume-element--block">
+                    <p class="resume-element__title">Intern</p>
+                    <p class="resume-element__subtitle">Infinera</p>
+                    <p class="resume-element__dates">May 2011 - Sep 2011</p>
+                    <ul>
+                        <li class="resume-element__description">Worked on extending OpenFlow, an approach to software defined networking, to support OTN systems</li>
+                    </ul>
                 </div>
             </div>
 
             <div class="resume-block">
-                <h2 class="resume-block__heading">Experience</h2>
-                <div class="resume-element resume-element--block">
-                    <p class="resume-element__title"> </p>
-                    <p class="resume-element__subtitle"> </p>
-                    <p class="resume-element__dates"> </p>
-                    <p class="resume-element__description"> </p>
+                <h2 class="resume-block__heading">Projects</h2>
+                <div class="resume-element resume-element--list">
+                    <p class="resume-element__title">Let's Eat App</p>
+                    <p class="resume-element__description">Developed app in a hack-a-thon that allows a group of friends reach a consensus on what to eat.</p>
                 </div>
-                <div class="resume-element resume-element--block">
-                    <p class="resume-element__title"> </p>
-                    <p class="resume-element__subtitle"> </p>
-                    <p class="resume-element__dates"> </p>
-                    <p class="resume-element__description"> </p>
+                <div class="resume-element resume-element--list">
+                    <p class="resume-element__title">Smart Pacman in Python</p>
+                    <p class="resume-element__description">Used AI concepts to strategically and efficiently solve a variety of complex packman boards.</p>
                 </div>
-                <div class="resume-element resume-element--block">
-                    <p class="resume-element__title"> </p>
-                    <p class="resume-element__subtitle"> </p>
-                    <p class="resume-element__dates"> </p>
-                    <p class="resume-element__description"> </p>
+                <div class="resume-element resume-element--list">
+                    <p class="resume-element__title">Yoga Kinect Application</p>
+                    <p class="resume-element__description">Created a yoga teaching application using Microsoft Kinect technology.</p>
                 </div>
-
+                <div class="resume-element resume-element--list">
+                    <p class="resume-element__title">Music Reactive Game in Python</p>
+                    <p class="resume-element__description">Designed and developed an obstacle game that varied based on the background music.</p>
+                </div>
             </div>
 
             <div class="resume-block">
                 <h2 class="resume-block__heading">Activities + Honors</h2>
-                <div class="resume-element--list">
-                    <p class="resume-element__title"> </p>
-                    <p class="resume-element__description"> </p>
+                <div class="resume-element resume-element--list">
+                    <p class="resume-element__title">1st place in Microsoft hackathon</p>
+                    <p class="resume-element__description">Let's Eat app won “Leadership Favorite” award after a 24 hour hackathon.</p>
+                </div>
+                <div class="resume-element resume-element--list">
+                    <p class="resume-element__title">LeaderShape</p>
+                    <p class="resume-element__description">Selected to participate in a week long leadership and self-discovery program.</p>
+                </div>
+                <div class="resume-element resume-element--list">
+                    <p class="resume-element__title">Theta Tau Engineering Fraternity</p>
+                    <p class="resume-element__description">Member and publicity chair, designed and implemented publicity campaigns on campus.</p>
+                </div>
+                <div class="resume-element resume-element--list">
+                    <p class="resume-element__title">Google FUSE</p>
+                    <p class="resume-element__description">One of 50 selected undergrads to attend a one-week Google program in New York.</p>
+                </div>
+                <div class="resume-element resume-element--list">
+                    <p class="resume-element__title">SWE + AWE</p>
+                    <p class="resume-element__description">Officer in the Society of Woman Engineers (Historian) and member of the Association of Woman in EECS.</p>
+                </div>
+                <div class="resume-element resume-element--list">
+                    <p class="resume-element__title">Delta Delta Delta Sorority</p>
+                    <p class="resume-element__description">Member for 4 years.</p>
                 </div>
             </div>
         </div>
