Add print stylesheet

--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>Resume</title>
-        <link rel="stylesheet" type="text/css" href="css/resume.css">
+        <link rel="stylesheet" type="text/css" media="screen" href="css/resume.css">
+        <link rel="stylesheet" type="text/css" media="print" href="css/print.css">
         <link href='https://fonts.googleapis.com/css?family=Gudea:400,700,400italic' rel='stylesheet' type='text/css'>
     </head>
 
